Swagger documentation completed, database and go backend seem to not be working along anymore, sadge
